--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,7 +1,5 @@
 ---
 deployment:
- tasks:
-  - export DEPLOYPATH=/home/aesbjgvuu0pm/public_html/
-  - /bin/rm -Rf $DEPLOYPATH
-  - /bin/mkdir $DEPLOYPATH
-  - /bin/cp -R src/ $DEPLOYPATH
+  tasks:
+    - export DEPLOYPATH=/home/aesbjgvuu0pm/public_html/
+    - /bin/rm -Rf /home/aesbjgvuu0pm/public_html/*
