--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -6,3 +6,4 @@ deployment:
     - /bin/cp Home.html $DEPLOYPATH
     - /bin/cp Knowledge.html $DEPLOYPATH
     - /bin/cp projects.html $DEPLOYPATH
+    - /bin/rsync -avz img/ /home/aesbjgvuu0pm/public_html/img/
