--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,7 +3,4 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home/aesbjgvuu0pm/public_html/
     - /bin/rm -Rf /home/aesbjgvuu0pm/public_html/*
-    - /bin/cp Home.html $DEPLOYPATH
-    - /bin/cp Knowledge.html $DEPLOYPATH
-    - /bin/cp projects.html $DEPLOYPATH
-    - /bin/rsync -avz img/ /home/aesbjgvuu0pm/public_html/img/
+    - /bin/cp -R * $DEPLOYPATH
